# sound_simulation

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  CURRENT_STATE.md  GEMINI.md  PROJECT_PLAN.md  README.md  boundary.py  cnn1d.py  environment.yml  generate.py  io.py  main.py  pyproject.toml  quicktest.py  requirements.txt  setup.py  simulate.py  utils.py  visualize.py
docs/: boundary.md  calculate.md  cnn1d.md  data_io.md  datasetformat.md  demos.md  gpu.md  index.md  interactive_setup.md  learning.md  main.md  quicktest.md  reconstruct.md  setup.md  simulate.md  trainingtest.md  utils.md  visualize.md  waveforms.md  web_ui.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  Volume.tsx  index.css
inference/: datasetformat.py  trainingtest.py
scripts/: demo_room_mapping.py  eval_and_report.py  eval_multipose.py  fit_calibration.py  generate_active_sensing.py  run_ui_server.py
simulate/: data_io.py  generate.py  main.py  reconstruct.py  setup.py  simulate.py  visualize.py
simulation/: calculate.py  data_io.py  generate.py  interactive_setup.py  reconstruct.py  simulate.py  utils.py  visualize.py  waveforms.py
src/acoustic_system/app/: main.py
src/acoustic_system/learning/: calibration.py  dataset.py  eval.py  losses.py  model.py  sensing.py  train.py
src/acoustic_system/simulation/: boundary.py  calculate.py  calculate_gpu.py  data_io.py  dataset.py  generate.py  interactive_setup.py  main.py  reconstruct.py  setup.py  simulate.py  utils.py  visualize.py  waveforms.py
tests/app/: test_sense_event.py
tests/learning/: test_calibration.py  test_model.py  test_sensing.py
tests/perf/: bench_simulate.py  bench_simulate_3d.py  bench_simulate_gpu.py  check_simulate.py  check_simulate_3d.py  check_simulate_gpu.py  make_reference.py  reference.npz
tests/reports/: demos_2026_07_12.md  gpu_backend_2026_07_10.md  joint_pose_2026_07_11.md  multipose_2026_07_10.md  passive_2026_07_10.md  sensing_v2_2026_07_15.md  training_2026_05_14.md  training_2026_05_14_aug.md
